# MR_Lab_AreeshaIqbal

install/: local_setup.sh  setup.sh
log/: latest_build
my_first_pkg/: setup.py
my_first_pkg/my_first_pkg/: simple_node.py
triangle_task/: package.xml  setup.cfg  setup.py
turtle_package_circular/: package.xml  setup.cfg  setup.py
turtle_package_circular/turtle_package_circular/: circle_turtle.py
week 3/turtle_package/my_turtle_package/: package.xml  setup.py
week1/: README.md  answers.md
week1/my_first_pkg/: package.xml
week1/my_first_pkg/my_first_pkg/: simple_node.py
week2/: Lab_2_report.docx
week3_turtle_package_circular/: package.xml  setup.cfg  setup.py
week3_turtle_package_circular/week3_turtle_package_circular/: circle_turtle.py  triangle_turtle.py
week4/: Lab_4_report.docx
week4/my_launch_pkg/: package.xml  setup.py
week4/my_launch_pkg/launch/: turtlesim_launch.py
week4/my_launch_pkg/my_launch_pkg/: turtle_follower.py
week6/lidar_navigation/: setup.py
week7/: waypoint_navigator.py
week7/Report/: Report.odt
week9/vision_pkg/: package.xml  setup.py
week_3_turtle_package_location/: package.xml  setup.cfg  setup.py
week_3_turtle_package_location/week_3_turtle_package_location/: move_to_location.py
week_3_turtle_package_multiple/: package.xml  setup.cfg  setup.py
week_3_turtle_package_multiple/week_3_turtle_package_multiple/: multi_turtle.py
week_3_turtle_package_triangular/: package.xml  setup.cfg  setup.py
week_3_turtle_package_triangular/week_3_turtle_package_triangular/: triangle_turtle.py
(+20 files in other folders)
