<?xml version="1.0"?>
<package format="3">
  <name>week3_turtle_package_circular</name>
  <version>0.0.0</version>
  <description>Week 3 turtle package circular task</description>
  <maintainer email="areesha.iqbal004@gmail.com">areesha</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
